# ApertureAwareLensDesign

./: LICENSE  README.md  requirements.txt  setup.cfg
data/zemax_files/: double-gauss-50mm.zmx
data/zemax_files/glass_catalogs/: SCHOTT.AGF
dlt/: aspheric.py  constants.py  curvature_sphere.py  file_io.py  lens_io.py  materials.py  numerical_aperture.py  optical_properties.py  optimize.py  plot_utils.py  render.py  sensor.py  sources.py  surface_base.py  tracing.py  zemax.py  zemax_loader.py
experiments/: compare_gradients.py  run_spot_error.py
