[metadata]
name = Aperture-aware Lens Design
version = 1.0
author = Arjun Teh
author_email = ateh@andrew.cmu.edu
description = Code for the paper "Aperture-aware Lens Design"
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = dlt